Add support for 64bit CC
* Add 64bit merge module
* Update Nuget package
* Add the Cc64.dll into the redist folder
* Clean up some tab/space format in the Perl.wxs

--- a/src/CcEC/CcEC.dll.config
+++ b/src/CcEC/CcEC.dll.config
@@ -3,4 +3,7 @@
 	<dllmap dll="CC32.dll">
 		<dllentry os="linux" dll="libsilcc.so.0.0.0"/>
 	</dllmap>
+	<dllmap dll="CC64.dll">
+		<dllentry os="linux" dll="libsilcc.so.0.0.0"/>
+	</dllmap>
 </configuration>
