--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
  mono-sil, libgdiplus-sil, geckofx29,
  fieldworks-applications
 Standards-Version: 3.9.6
-Homepage: http://hg.palaso.org/ec-main
+Homepage: https://github.com/silnrsi/encoding-converters-core
 
 Package: fieldworks-enc-converters
 Architecture: any
