--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -4,6 +4,8 @@ Section: libs
 Maintainer: Stephen McConnel <stephen_mcconnel@sil.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
  dh-autoreconf, lsb-release, devscripts,
+ libteckit-dev,
+ pkg-config,
  mono-sil, libgdiplus-sil,
  fieldworks-applications
 Standards-Version: 3.9.6
