Use new icu location if needed
icu-fw (or rather its depencies) from fieldworks 9 puts icu .so files
in /usr/lib/fieldworks/lib. FW 8.3 puts them into /usr/lib/fieldworks.

--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
  libteckit-dev,
  pkg-config,
  mono-sil, libgdiplus-sil,
- fieldworks-applications
+ icu-dev-fw | fieldworks-applications (<< 9.0.0~)
 Standards-Version: 3.9.6
 Homepage: https://github.com/silnrsi/encoding-converters-core
 
