--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,8 @@ Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
  pkg-config,
  mono-runtime,
  mono-sil, libgdiplus-sil,
- icu-dev-fw | fieldworks-applications (<< 9.0.0~)
+ icu-dev-fw | fieldworks-applications (<< 9.0.0~),
+ wget
 Standards-Version: 3.9.6
 Homepage: https://github.com/silnrsi/encoding-converters-core
 
