--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,7 @@ ClientBin/
 *.publishsettings
 node_modules/
 orleans.codegen.cs
+*.swp
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
@@ -265,3 +266,4 @@ paket-files/
 .idea/
 *.sln.iml
 
+autom4te.cache
