Use correct mono for nuget

--- a/Makefile.in
+++ b/Makefile.in
@@ -46,7 +46,7 @@ download_nuget:
 	wget -O build/NuGet.exe $(NUGET_URL) || curl -o build/NuGet.exe -L $(NUGET_URL)
 
 download_dependencies: download_nuget
-	mono build/NuGet.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
+	. ./environ && mono build/NuGet.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
 	cp -a packages/Geckofx45.64.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.64.Linux.45.0.21.0/lib/net40
 	cp -a packages/Geckofx45.32.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.32.Linux.45.0.21.0/lib/net40
 	cp -a packages/Geckofx45.64.45.0.33/lib/Geckofx-Core.dll.config packages/Geckofx45.64.45.0.33/lib/net45/
