--- a/src/EncCnvtrs/SilEncConverters40.dll.config
+++ b/src/EncCnvtrs/SilEncConverters40.dll.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<dllmap dll="TECkit_Compiler_x86">
-		<dllentry os="linux" cpu="x86-64" dll="libTECkit_Compiler_x86_64.so"/>
-		<dllentry os="linux" cpu="x86" dll="libTECkit_Compiler_x86.so"/>
+		<dllentry os="linux" cpu="x86-64" dll="libTECkit_Compiler.so"/>
+		<dllentry os="linux" cpu="x86" dll="libTECkit_Compiler.so"/>
 	</dllmap>
 	<dllmap dll="TECkit_x86">
-		<dllentry os="linux" cpu="x86-64" dll="libTECkit_x86_64.so"/>
-		<dllentry os="linux" cpu="x86" dll="libTECkit_x86.so"/>
+		<dllentry os="linux" cpu="x86-64" dll="libTECkit.so"/>
+		<dllentry os="linux" cpu="x86" dll="libTECkit.so"/>
 	</dllmap>
 </configuration>
