Update nuget from 2.8 to 3.4.4
* nuget says nuget 2.12 or higher is needed to fetch nunit via nuget.
* FW uses nuget 3.4.4 successfully.

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ publish/
 PublishScripts/
 
 build/NuGet.exe
+build/nuget.exe
 # NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
