--- a/Makefile.in
+++ b/Makefile.in
@@ -38,15 +38,15 @@ DLLS    = ECInterfaces.dll SilEncConverters40.dll CcEC.dll \
 PLUGINS = "AI 4.0.0.0 Plugin Details.xml" "CC 4.0.0.0 Plugin Details.xml" \
     "EC 4.0.0.0 Plugin Details.xml" "IcuEC 4.0.0.0 Plugin Details.xml" \
     "PerlEC 4.0.0.0 Plugin Details.xml" "PythonEC 4.0.0.0 Plugin Details.xml"
-NUGET_URL = https://nuget.org/NuGet.exe
+NUGET_URL = https://dist.nuget.org/win-x86-commandline/v3.4.4/nuget.exe
 
 all: debug
 
 download_nuget:
-	wget -O build/NuGet.exe $(NUGET_URL) || curl -o build/NuGet.exe -L $(NUGET_URL)
+	wget -O build/nuget.exe $(NUGET_URL) || curl -o build/nuget.exe -L $(NUGET_URL)
 
 download_dependencies: download_nuget
-	. ./environ && mono build/NuGet.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
+	. ./environ && mono build/nuget.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
 	cp -a packages/Geckofx45.64.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.64.Linux.45.0.21.0/lib/net40
 	cp -a packages/Geckofx45.32.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.32.Linux.45.0.21.0/lib/net40
 
