Migrate from xbuild to msbuild
* Available in mono5.
* mono5 says xbuild will go away.
* Change ToolsVersion from 3.5 to 15.0 because of compile errors.
* Renamed xbuild.sh script and changed final command.
* Adjusted xml namespace in a csproj for mono5.
* Set RegisterForComInterop to false since it caused a failure running
RegisterAssembly task during build.

--- a/src/AIGuesserEC/AIGuesserEC-mono.csproj
+++ b/src/AIGuesserEC/AIGuesserEC-mono.csproj
@@ -5,7 +5,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
-    <RegisterForComInterop>true</RegisterForComInterop>
+    <RegisterForComInterop>false</RegisterForComInterop>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
@@ -54,7 +54,7 @@
     <OutputPath>..\..\output\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <RegisterForComInterop>true</RegisterForComInterop>
+    <RegisterForComInterop>false</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
@@ -80,7 +80,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.XML" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Xsl" />
     <Reference Include="System.Xml.Linq">
     </Reference>
   </ItemGroup>
