--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ download_dependencies: download_nuget
 	cp -a packages/Geckofx45.32.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.32.Linux.45.0.21.0/lib/net40
 
 debug: download_dependencies
-	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:FIELDWORKS=$(FIELDWORKS)
+	@cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /property:FIELDWORKS=$(FIELDWORKS)
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
 	  (cd $$subdir && $(MAKE) all FIELDWORKS=$(FIELDWORKS)) || break; \
@@ -68,7 +68,7 @@ debug: download_dependencies
 	@cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(OUTDIR)
 
 release: download_dependencies
-	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:config=Release /property:FIELDWORKS=$(FIELDWORKS)
+	@cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /property:config=Release /property:FIELDWORKS=$(FIELDWORKS)
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
 	  (cd $$subdir && $(MAKE) release FIELDWORKS=$(FIELDWORKS)) || break; \
@@ -84,7 +84,7 @@ release: download_dependencies
 	@cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(RELEASEOUT)
 
 clean:
-	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:clean
+	@cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /target:clean
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
 	  (cd $$subdir && $(MAKE) clean) || true; \
@@ -159,7 +159,7 @@ check: all
 	  find $(NUNITROOT) -name nunit.core.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
 	  find $(NUNITROOT) -name nunit.core.interfaces.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
 	fi
-	@cd build && LD_LIBRARY_PATH="$(OUTDIR)" ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:test
+	@cd build && LD_LIBRARY_PATH="$(OUTDIR)" ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /target:test
 	@for subdir in $(SRCDIRS); do \
 	  echo checking in $$subdir; \
 	  (cd $$subdir && $(MAKE) check) || break; \
