fixed builds of different configurations so the tests succeed. for all but x64. In x64, the build, two tests still fail: TestCcEncConverters (due to a memory violation), and TestPyScriptEncConverter *occasionally* fails, I think due to the tests running in parallel (the times it fails is when the m_encConverters has converters already in it when TestPyScriptEncConverters begins (which shouldn't happen according to the test Setup). ALSO, you have to have the 2.7 x64 version of Python installed (and make sure the x86 version isn't in the path ahead of it) for the Python test to work.

--- a/src/AIGuesserEC/GuesserEC/GuesserEC.vcxproj
+++ b/src/AIGuesserEC/GuesserEC/GuesserEC.vcxproj
@@ -119,8 +119,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.40219.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|Win32'">$(SolutionDir)output\Debug\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|Win32'">$(SolutionDir)build\Obj\$(Configuration)\</IntDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|Win32'">$(SolutionDir)output\$(Platform)\$(Configuration)</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|Win32'">$(SolutionDir)build\Obj\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|Win32'">true</LinkIncremental>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='LegacyDebug|x64'">true</LinkIncremental>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='LegacyRelease|Win32'">$(SolutionDir)output\release\</OutDir>
