--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -192,13 +192,13 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>if $(Platform) == x64 (
-copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuuc54.dll $(SolutionDir)output\x64\debug\
-copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuin54.dll $(SolutionDir)output\x64\debug\
-copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icudt54.dll $(SolutionDir)output\x64\debug\
+copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuuc54.dll $(SolutionDir)output\x64\$(ConfigurationName)
+copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuin54.dll $(SolutionDir)output\x64\$(ConfigurationName)
+copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icudt54.dll $(SolutionDir)output\x64\$(ConfigurationName)
 ) ELSE (
-copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icuuc54.dll $(SolutionDir)output\Win32\debug\
-copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icuin54.dll $(SolutionDir)output\Win32\debug\
-copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icudt54.dll $(SolutionDir)output\Win32\debug\
+copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icuuc54.dll $(SolutionDir)output\Win32\$(ConfigurationName)
+copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icuin54.dll $(SolutionDir)output\Win32\$(ConfigurationName)
+copy $(SolutionDir)DistFiles\windows\Win32\icu\bin\icudt54.dll $(SolutionDir)output\Win32\$(ConfigurationName)
 )</PostBuildEvent>
   </PropertyGroup>
 </Project>
