Change from __MonoCS__ to Util.IsUnix
* mono 5 doesn't define __MonoCS__.
* A `public const string` was changed to a `public static readonly
string` to allow use of Util.IsUnix. It's not clear that that is
causing any problems.
* Did a partial '    '->\t change on TestEncConverters.cs, which
seemed to have mixed indentation.
* Made 'EncCnvtrs 2010.csproj' more flexible for finding
ECECInterfaces.dll, as this was the csproj being picked up by VSCode.
* 23/23 tests pass.

--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -146,7 +146,7 @@
     </Reference>
     <Reference Include="ECInterfaces, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\output\release\ECInterfaces.dll</HintPath>
+      <HintPath>..\..\output\$(Configuration)\ECInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
