Change packaging to use mono 5
* Change depends and build-depends to mono5-sil and libgdiplus5-sil to
more easily run on Ubuntu 20.04.
* Add msbuild dependency.
* Put $@ first in debian/rules dh command to be ready for future
compatibility levels of dh.
* In debian/rules, use environ to set the environment over all the
packaging steps.
- Removing FIELDWORKS=1 since is in environ.
* Give msbuild.sh output some context.
* Newer nuget seems to need more help than just XDG_CONFIG_HOME or
XDG_DATA_HOME. Setting HOME instead since otherwise HOME is
/nonexistent, causing a problem for nuget downloading.
* Reorder the Release section of a couple csproj files so `make
release` works.
* Broaded dependency to python2-dev, still in Ubuntu 20.04 universe.
- Set PYTHON_VERSION="2.7" in `environ` so configure finds the
`python2.7` executable instead of looking for `python` and not finding
it.
* Make downloading with wget and nuget be retried a few times, so that
network problems on the build server are less likely to fail a job.

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,10 +43,10 @@ NUGET_URL = https://dist.nuget.org/win-x86-commandline/v3.4.4/nuget.exe
 all: debug
 
 download_nuget:
-	wget -O build/nuget.exe $(NUGET_URL) || curl -o build/nuget.exe -L $(NUGET_URL)
+	build/multitry wget -O build/nuget.exe $(NUGET_URL) || build/multitry curl -o build/nuget.exe -L $(NUGET_URL)
 
 download_dependencies: download_nuget
-	. ./environ && mono build/nuget.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
+	. ./environ && build/multitry mono build/nuget.exe restore .nuget/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
 	cp -a packages/Geckofx45.64.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.64.Linux.45.0.21.0/lib/net40
 	cp -a packages/Geckofx45.32.Linux.45.0.21.0/build/Geckofx-Core.dll.config packages/Geckofx45.32.Linux.45.0.21.0/lib/net40
 
