Split location of dlls in nuget package
With the old location, when a project used the nuget package the
compiler wasn't able to find the assemblies.

--- a/Encoding-Converters-Core.props
+++ b/Encoding-Converters-Core.props
@@ -1,7 +1,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
-		<EncodingConvertersDir32>$(MSBuildThisFileDirectory)..\lib\win7-x86</EncodingConvertersDir32>
-		<EncodingConvertersDir64>$(MSBuildThisFileDirectory)..\lib\win7-x64</EncodingConvertersDir64>
+		<EncodingConvertersDir32>$(MSBuildThisFileDirectory)..\runtimes\win7-x86\native</EncodingConvertersDir32>
+		<EncodingConvertersDir64>$(MSBuildThisFileDirectory)..\runtimes\win7-x64\native</EncodingConvertersDir64>
 		<EncodingConvertersMergeModuleDir>$(MSBuildThisFileDirectory)..\MergeModules</EncodingConvertersMergeModuleDir>
 		<EncodingConvertersPluginsDir>$(MSBuildThisFileDirectory)..\Plugins</EncodingConvertersPluginsDir>
 	</PropertyGroup>
